Se agrega un campo para introducir el titulo de la noticia

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,22 @@
     </ion-toolbar>
   </ion-header>
 
+<!--Se empiezan a agregar los campos para agregar una noticia-->
+<ion-list>
+  <ion-item>
+    <ion-input labelPlacement="floating" >
+      <div slot="label">Título de tu noticia <ion-text color="danger">(*)</ion-text></div>
+    </ion-input>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+  <ion-item>
+    <ion-input labelPlacement="floating" >
+      <div slot="label">Título de tu noticia <ion-text color="danger">(*)</ion-text></div>
+    </ion-input>
+  </ion-item>
+</ion-list>
+
   <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
