--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,6 +1,6 @@
 /* Cambiar el color de fondo de la barra de navegación */
 ion-tab-bar {
-  --background: #373839da; /* Color de fondo */
+  --background: #570655da; /* Color de fondo */
 }
 
 /* Cambiar el color de los textos de los botones */
@@ -10,7 +10,7 @@ ion-tab-button {
 
 /* Cambiar el color del icono de los botones */
 ion-tab-button ion-icon {
-  --color: #cb96eb; /* Color del icono */
+  --color: #bb4eff; /* Color del icono */
 }
 
 /* Cambiar el color del texto y el icono cuando el botón está seleccionado */
