--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,3 +1,4 @@
+
 .form-container {
   display: flex;
   justify-content: center;
@@ -37,4 +38,16 @@ ion-textarea {
 ion-button {
   --background: #6200ea; /* Fondo del botón */
   --color: #ffffff; /* Color del texto del botón */
+}
+
+.image-preview-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.image-preview {
+  max-width: 80%; /* Ancho máximo de la imagen */
+  max-height: 80%; /* Altura máxima de la imagen */
 }
