--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,12 +6,27 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Ver noticias</ion-title>
+      <ion-title size="large">Noticias</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="6" *ngFor="let noticia of noticias">
+        <ion-card>
+          <img [src]="noticia.imagen" *ngIf="noticia.imagen" alt="Imagen de la noticia">
+          <ion-card-header>
+            <ion-card-title>{{ noticia.titulo }}</ion-card-title>
+            <ion-card-subtitle>{{ noticia.fecha }}</ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content>
+            <p>{{ noticia.descripcion }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
