--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,13 +13,13 @@
       <ion-card-content>
         <ion-list>
           <ion-item>
-            <ion-input labelPlacement="floating" placeholder="Título de tu noticia">
+            <ion-input labelPlacement="floating" placeholder="Título de tu noticia" [(ngModel)]="noticia.titulo">
               <div slot="label">Título de tu noticia <ion-text color="danger">(*)</ion-text></div>
             </ion-input>
           </ion-item>
 
           <ion-item>
-            <ion-datetime labelPlacement="floating" placeholder="Fecha de la noticia"></ion-datetime>
+            <ion-datetime labelPlacement="floating" placeholder="Fecha de la noticia" [(ngModel)]="noticia.fecha"></ion-datetime>
           </ion-item>
 
           <ion-item>
@@ -32,7 +32,7 @@
           </ion-item>
 
           <ion-item>
-            <ion-textarea labelPlacement="floating" placeholder="Descripción de la noticia">
+            <ion-textarea labelPlacement="floating" placeholder="Descripción de la noticia" [(ngModel)]="noticia.descripcion">
               <div slot="label">Descripción de la noticia <ion-text color="danger">(*)</ion-text></div>
             </ion-textarea>
           </ion-item>
