--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,10 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Ver noticias
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
@@ -15,8 +9,11 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col size="12" size-md="6" *ngFor="let noticia of noticias">
+      <ion-col size="12" size-md="6" *ngFor="let noticia of noticias; let i = index">
         <ion-card>
+          <ion-button fill="clear" class="delete-button" (click)="eliminarNoticia(i)">
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
           <img [src]="noticia.imagen" *ngIf="noticia.imagen" alt="Imagen de la noticia">
           <ion-card-header>
             <ion-card-title>{{ noticia.titulo }}</ion-card-title>
