--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -60,5 +60,5 @@ ion-button {
 }
 
 ion-content {
-  --background: linear-gradient(to right, #000000, #390337); /* Gradiente de morado a azul */
+  --background: linear-gradient(to right, #01244e, #390337); 
 } //otros tipos de gradientes son linear-gradient(to right, #6200ea, #007bff) o linear-gradient(to right, #6200ea, #007bff, #00ff00, #ff0000)
