--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,3 @@
-
-
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
@@ -12,7 +10,7 @@
       <ion-col size="12" size-md="6" *ngFor="let noticia of noticias; let i = index">
         <ion-card>
           <ion-button fill="clear" class="delete-button" (click)="eliminarNoticia(i)">
-            <ion-icon name="trash"></ion-icon>
+            <ion-icon name="close-circle-sharp"></ion-icon>
           </ion-button>
           <img [src]="noticia.imagen" *ngIf="noticia.imagen" alt="Imagen de la noticia">
           <ion-card-header>
@@ -26,4 +24,5 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
 </ion-content>
